--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ html{
 .banner{
 	width: 100%;
 	height: 100vh;
-    background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.2)),url(Image21.png);
+    background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.2)),url(Images/Image21.png);
     background-size: cover;
     background-position: center;
 }
@@ -166,7 +166,7 @@ button{
 	margin: 2em auto;
 	width: 100%;
 	height: 100vh;
-    background-image: url("implant.jpg");
+    background-image: url("Images/implant.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
