--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,12 @@
 
   @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
+  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400&display=swap');
+
+
+
+
 *{
-	margin: 0;
-	padding: 0;
 	box-sizing: border-box;
 	font-family: 'Righteous', sans-serif;
 }
@@ -16,7 +19,173 @@ html{
     scroll-behavior: smooth;
 }
 
-/* SECCION INICIO */
+body{
+	min-width: 100%;
+	margin: 0;
+	min-height: 100%;
+	background-color: #fff;
+	color: #333;
+	font-size: 14px;
+	line-height: 20px;
+	font-weight: 200;
+	display: block;
+}
+.bw_lineas_container {
+	position: fixed;
+	left: 0;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	z-index: 2;
+	display: flex;
+	height: 100%;
+	margin-right:108px;
+	margin-left: 108px;
+	justify-content: space-between;
+}
+.bw_linea {
+	width: 1px;
+	height: 100%;
+	margin-right: 1px;
+	background-color: rgba(0, 0, 0, .1);
+}
+
+.header_seccion {
+	z-index: : 100;
+	width: 811px;
+	margin-top: 0;
+	padding-right: 108px;
+}
+
+.header {
+	position: absolute;
+	display: flex;
+	width: 100vw;
+	height: 108px;
+	margin-top: 0;
+	padding-left: 108px;
+	justify-content: space-between;
+	align-items: flex-start;
+}
+
+.nav_logo {
+	position: relative;
+	left: 3px;
+	display: block;
+	margin-top: 3.8vw;
+}
+
+.w_inline-block {
+	max-width: 100%;
+	display: inline-block;
+}
+
+a{
+	color: inherit;
+	background-color: transparent;
+}
+
+.logo {
+	height: 30px;
+	position: relative;
+	display: block;
+	margin-top: 0;
+
+}
+.pag_container {
+	position: relative;
+	z-index: 3;
+	display: flex;
+	overflow: hidden;
+	flex-wrap: wrap;
+	align-content: flex-start;
+}
+
+.about_hero_seccion {
+	position: relative;
+	z-index: 3;
+	display: flex;
+	width: 100%;
+	padding-top: 108px;
+	padding-right: 108px;
+	flex-direction: column;
+	align-items: flex-start;
+}
+
+.hero_container {
+	display: flex;
+	width: 100%;
+	height: 120vh;
+	flex-direction: column;
+	align-items: flex-start;
+	flex: 0 0 auto;
+}
+
+.container_img-container {
+	position: relative;
+	width: 100%;
+	height: 100%;
+}
+
+.image_carrusel {
+	position: absolute;
+	left: 0;
+	top:0;
+	right: 0;
+	bottom: 0;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	object-position: 50% 50%;
+}
+img {
+	border: 0;
+	max-width: 100%;
+	vertical-align: middle;
+	display: inline-block;
+}
+
+div{
+	display: block;
+}
+
+.black_box_container {
+	display: block;
+	width: 100%;
+	padding-top: 10vh;
+	padding-bottom: 10vh;
+	padding-left: 108px;
+}
+
+.black_box_intro {
+	display: flex;
+	width: 50%;
+	padding-right: 40px;
+	flex-direction: column;
+	justify-content: center;
+	align-items: flex-start;
+} 
+
+.name_projet {
+	margin-top: 0;
+	margin-bottom: 0;
+	padding-bottom: 15px;
+	flex: 0 auto;
+	font-family:  'Poppins', sans-serif;
+	font-weight: 400;
+	color: #333333;
+}
+.slogan {
+	margin-top: 0;
+	margin-bottom: 0;
+	flex: 0 auto;
+	font-family:  'Poppins', sans-serif;
+	font-weight: 300;
+}
+
+
+
+/* SECCION INICIO 
 
 .banner{
 	width: 100%;
@@ -137,7 +306,7 @@ button{
 }
 .banner .redes a:active{
 	color: #adaaaa;
-}
+} */
 
 #inicio .contenedorcita{
 	padding: 184px 60px;	
