--- a/styles.css
+++ b/styles.css
@@ -315,6 +315,41 @@ p.img_epigrafe {
     align-content: flex-end;
 }
 
+.heading_amenities {
+    width: 100%;
+	height: auto;
+	padding: 10vh 108px;	
+}
+
+.container_heading_amenities {
+	display: flex;
+    width: 100%;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    align-content: flex-end;
+}
+
+.amenities_container {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-around;
+	padding: 10vh 108px;
+}
+
+i{
+	font-size: 4rem;
+}
+
+.amenitie_container {
+	display: flex;
+	flex-direction: column;
+    text-align: center;
+}
+
+i {
+}
+
+
 /* SECCION INICIO 
 
 .banner{
