--- a/styles.css
+++ b/styles.css
@@ -45,11 +45,55 @@ body{
 	background-color: rgba(0, 0, 0, .1);
 }
 
+.header_container{
+    display: flex;
+	width: 100%;
+	height: auto;
+	padding: 0 108px 0 108px;
+	flex-wrap: wrap;
+	align-content: flex-start;
+	text-align: justify;
+}
+
+
 .header_seccion {
-	z-index: : 100;
-	width: 811px;
-	margin-top: 0;
-	padding-right: 108px;
+	width: 50%;
+	padding-right: 0;
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.header_seccion .der{
+	display: flex;
+	justify-content: flex-end;
+}
+
+
+
+.menu_box {
+	display: flex;
+	width: 100%;
+}
+
+
+ul.menu_container {
+	display: flex;
+	width: 100%;
+	justify-content: flex-end;
+	padding: 0;
+}
+
+
+.menu_container li {
+	list-style: none;
+	display: inline-block;
+	margin: 3.8vw 20px 0 20px;
+	position: relative;
+
+}
+
+.menu_container li:last-of-type {
+	margin-right: 0;
 }
 
 .header {
@@ -70,6 +114,7 @@ body{
 	margin-top: 3.8vw;
 }
 
+
 .w_inline-block {
 	max-width: 100%;
 	display: inline-block;
@@ -85,7 +130,9 @@ a{
 	position: relative;
 	display: block;
 	margin-top: 0;
+	margin-bottom: 1rem;
 }
+
 
 .pag_container {
 	position: relative;
@@ -101,7 +148,6 @@ a{
 	z-index: 3;
 	display: flex;
 	width: 100%;
-	padding-top: 108px;
 	padding-right: 108px;
 	flex-direction: column;
 	align-items: flex-start;
@@ -368,6 +414,7 @@ p.img_epigrafe {
 footer {
 	display: flex;
 	width: 100%;
+	height: 134px;
 	background-color: rgba(0, 0, 0, .1);
 	align-items: center;
 }
