Agregando primer @media
Avances (576px)

--- a/styles.css
+++ b/styles.css
@@ -63,12 +63,6 @@ body{
 	flex-wrap: wrap;
 }
 
-.header_seccion .der{
-	display: flex;
-	justify-content: flex-end;
-}
-
-
 
 .menu_box {
 	display: flex;
@@ -88,8 +82,15 @@ ul.menu_container {
 	list-style: none;
 	display: inline-block;
 	margin: 3.8vw 20px 0 20px;
-	position: relative;
+	
+}
 
+.menu_container li a {
+	text-decoration: none;
+	color: #333;
+}
+.menu_container li a:hover {
+	cursor: pointer;
 }
 
 .menu_container li:last-of-type {
@@ -385,6 +386,10 @@ p.img_epigrafe {
 .amenitie_container i{
 	font-size: 4rem;
 }
+figcaption {
+	font-size: 1rem;
+}
+
 
 .amenitie_container {
 	display: flex;
@@ -437,10 +442,11 @@ footer {
 .redes a i {
   font-size: 2rem;
   padding-top: 0.5rem;
+  cursor: pointer;
 }
 
 .redes a{
-	 color: #fff;
+	color: #fff;
     display: inline-block;
     text-align: center;
     text-decoration: none;
@@ -453,6 +459,108 @@ footer {
     font-size: 1.5rem;
     transition: .3s;
 }
+
+
+
+/*SECCION R E S P O N S I V E*/
+
+
+@media (min-width:1001px) {
+	
+
+}
+
+@media (min-width:577px) and (max-width:1000px) {
+	
+		
+}
+
+
+@media (max-width: 576px) {
+	.logo {
+		height: 20px;
+
+	}
+    ul.menu_container {
+ 	flex-direction: column;
+    }
+    .name_projet {
+    	font-size: 1rem;
+    }
+	
+	.menu_container li {
+        margin: 1.9vw 20px 0 20px;
+    }
+    .slogan {
+	font-weight: 300;
+	font-size: 1rem;
+    }
+
+    .info_parrafo h6 {
+	font-size: 15px;
+	line-height: 17px;
+	letter-spacing: 0.4rem;
+	font-weight: bold;
+	}
+
+	h2, h3 {
+		letter-spacing: 0.1rem;
+    }
+    
+    .amenitie_container {
+    	padding-left: 2px;
+    	padding-right: 2px;
+    }
+
+    .amenitie_container i{
+	font-size: 1.5rem;
+    }
+
+    figcaption {
+	font-size: 0.5rem;
+    }
+    .amenities_container {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-around;
+	padding: 0;
+    }
+
+    .container_heading_amenities {
+    	padding-bottom: 1rem;
+    }
+    
+    .redes {
+    	display: flex;
+    	padding: 0;
+    }
+
+
+    .redes a i {
+    font-size: 1.5rem;
+    padding-top: 0.5rem;
+    cursor: pointer;
+    }
+    .redes a{
+	color: #fff;
+    display: inline-block;
+    text-align: center;
+    text-decoration: none;
+    border: 1px solid #fff;
+    border-radius: 100%;
+    width: 45px;
+    height: 45px;
+    line-height: 42px;
+    margin: 40px 25px;
+    font-size: 1.5rem;
+    transition: .3s;
+}
+
+
+
+}
+
+
 
 
 /* SECCION INICIO 
