--- a/styles.css
+++ b/styles.css
@@ -387,8 +387,10 @@ p.img_epigrafe {
 }
 
 .amenitie_container i{
+	z-index: 999;
 	font-size: 4rem;
 }
+
 figcaption {
 	font-size: 1rem;
 }
@@ -487,11 +489,19 @@ footer {
   justify-content: flex-end;
 
 }
+.container_masproyectos a {
+	text-decoration: none;
+	color: #333;
+	}
 
 
 h4 {
 	 writing-mode: vertical-lr;
     transform: rotate(180deg);
+}
+
+#contacto {
+	background-color: transparent;
 }
 
 .contacto h2{
@@ -690,7 +700,7 @@ h4 {
     .black_box_intro {
       width: 100%;
     }
-    
+
 
     .slogan {
 	font-weight: 300;
