--- a/styles.css
+++ b/styles.css
@@ -516,7 +516,7 @@ h4 {
     display: flex;
 }
 .contacto .col{
-    width: 50%;
+    width: 100vh;
     position: relative;
 }
 
@@ -751,6 +751,11 @@ h4 {
 
     .container_heading_amenities {
     	padding-bottom: 1rem;
+    }
+
+    .contacto .col{
+        width: 100vh;
+  
     }
     
     .yo{
