--- a/styles.css
+++ b/styles.css
@@ -515,8 +515,9 @@ h4 {
 .contacto .fila{
     display: flex;
 }
+
 .contacto .col{
-    width: 100vh;
+    width: 50%;
     position: relative;
 }
 
@@ -676,25 +677,52 @@ h4 {
 
 
 @media (max-width: 576px) {
+	
+   .bw_lineas_container {
+    margin-right:30px;
+	margin-left: 30px;
+    }
+
+
 	.logo {
 		height: 20px;
 
 	}
     ul.menu_container {
  	flex-direction: column;
+ 
     }
 
     img {
 	display: block;
-}
+    }
+
+    .about_hero_seccion {
+    	padding-right: 30px;
+    }
+
+    .black_box_container {
+    	padding-left: 30px;
+    }
+
 
 
     .name_projet {
     	font-size: 1rem;
     }
+
+    .proyecto_info_container {
+        padding: 0 30px 5vh 30px;
+	
+     }
+
 	
 	.menu_container li {
         margin: 1.9vw 20px 0 20px;
+    }
+
+    .menu_container li a {
+	font-size: 0.8rem;
     }
 
     .black_box_intro {
@@ -742,6 +770,7 @@ h4 {
     figcaption {
 	font-size: 0.5rem;
     }
+
     .amenities_container {
 	display: flex;
 	flex-wrap: wrap;
@@ -753,6 +782,12 @@ h4 {
     	padding-bottom: 1rem;
     }
 
+    .contacto .fila {
+    
+    }
+
+
+ 
     .contacto .col{
         width: 100vh;
   
@@ -788,6 +823,9 @@ h4 {
     font-size: 1.5rem;
     transition: .3s;
 }
+
+.menu_container li h3 {
+	font-size: 1rem;
 
 
 
