--- a/styles.css
+++ b/styles.css
@@ -770,6 +770,10 @@ h4 {
    
     }
 
+    .vistas_container {
+    	padding: 0;
+    }
+    
     .heading_amenities {
    
 	padding-left: 30px;
@@ -829,7 +833,7 @@ h4 {
     	font-size: 0.7rem;
     	padding-left: 0;
     }
-    
+
     .redes {
     	display: flex;
     	padding: 0;
