--- a/styles.css
+++ b/styles.css
@@ -701,6 +701,10 @@ h4 {
     	padding-right: 30px;
     }
 
+    .hero_container {
+	height: 60vh;
+    }
+
     .black_box_container {
     	padding-left: 30px;
     }
@@ -773,7 +777,7 @@ h4 {
     .vistas_container {
     	padding: 0;
     }
-    
+
     .heading_amenities {
    
 	padding-left: 30px;
